modify: fixed unreadable button label and added table header highlight

--- a/src/main/resources/css/Payroll.css
+++ b/src/main/resources/css/Payroll.css
@@ -14,7 +14,8 @@
     -fx-background-color: #c9c9c9;
 }
 
-.table-header: hover{
-    -fx-background-color: #c9c9c9;
+
+.table-view .column-header: hover{
+    -fx-background-color: CEB689;
 }
 
